--- a/WebContent/assets/css/main-style.css
+++ b/WebContent/assets/css/main-style.css
@@ -13,7 +13,7 @@ Author: http://binarytheme.com
     background-color:rgb(83, 163, 163);
 }
 .user-section-inner {
-    height: 65px;
+height: 65px;
 width: 65px;
 -moz-border-radius: 3px;
 -webkit-border-radius: 3px;
@@ -22,19 +22,21 @@ overflow: hidden;
 display: inline-block;
 float: left;
 margin-right: 15px;
-margin-top: 20px;
+margin-top: 15px;
+margin-bottom: 8px;
 }
     .user-section-inner img {
         margin-left:10px;
+
         width:55px;
-        height:60px;
+        height:55px;
         
     }
 .user-info {
     display: block;
     color:#000!important;
 display: inline-block;
-padding: 15px;
+padding: 10px;
 margin-bottom: 0px
 }
 .user-text-online {
